--- a/redalert2/PKGBUILD
+++ b/redalert2/PKGBUILD
@@ -6,7 +6,7 @@ arch=('any')
 url="http://ra2.com"
 license=('custom')
 groups=('lat')
-depends=('wine')
+depends=('wine-app-helper')
 OPTIONS=(!strip)
 noextract=("$pkgname.tar.xz")
 source=("http://loongarch.zhcn.cc/sources/wine-apps/$pkgname.tar.xz/eaa675abee8fd8f53cac5bce29d7029e/$pkgname.tar.xz"
