--- a/cstrike/PKGBUILD
+++ b/cstrike/PKGBUILD
@@ -6,7 +6,7 @@ arch=('any')
 url="http://unknown.com"
 license=('custom')
 groups=('lat')
-depends=('wine')
+depends=('wine-app-helper')
 OPTIONS=(!strip)
 noextract=("$pkgname.tar.xz")
 source=("http://loongarch.zhcn.cc/sources/wine-apps/$pkgname.tar.xz/94375b90a991d6f5b732cfbd98abc39c/$pkgname.tar.xz"
