--- a/typeeasy/PKGBUILD
+++ b/typeeasy/PKGBUILD
@@ -5,8 +5,8 @@ pkgdesc="Kingsoft TypeEasy(金山打字通)"
 arch=('any')
 url="https://www.51dzt.com"
 license=('custom')
-groups=('lat')
-depends=('wine')
+groups=('wine-apps')
+depends=('wine-app-helper')
 OPTIONS=(!strip)
 noextract=("$pkgname.tar.xz")
 source=("http://loongarch.zhcn.cc/sources/wine-apps/$pkgname.tar.xz/089b9c22872a265bbc2fd6946969ae48/$pkgname.tar.xz"
