--- a/cstrike/PKGBUILD
+++ b/cstrike/PKGBUILD
@@ -5,7 +5,7 @@ pkgdesc="Counter Strike"
 arch=('any')
 url="http://unknown.com"
 license=('custom')
-groups=('lat')
+groups=('wine-apps')
 depends=('wine-app-helper')
 OPTIONS=(!strip)
 noextract=("$pkgname.tar.xz")
