--- a/redalert2/PKGBUILD
+++ b/redalert2/PKGBUILD
@@ -5,7 +5,7 @@ pkgdesc="Red Alert 2(红警2)"
 arch=('any')
 url="http://ra2.com"
 license=('custom')
-groups=('lat')
+groups=('wine-apps')
 depends=('wine-app-helper')
 OPTIONS=(!strip)
 noextract=("$pkgname.tar.xz")
