--- a/wine-app-helper/PKGBUILD
+++ b/wine-app-helper/PKGBUILD
@@ -5,7 +5,7 @@ pkgdesc="Helper tools to run wine bottle apps"
 arch=('any')
 url="https://www.zhcn.cc"
 license=('GPL')
-depends=('zenity')
+depends=('wine' 'zenity')
 source=(wine-run
     wine-mkapp)
 sha256sums=('4a6c639697a880a19c87a4080e8d86ed12403ac367066ec3eb820d0614d9610a'
