--- a/aardio/PKGBUILD
+++ b/aardio/PKGBUILD
@@ -5,8 +5,8 @@ pkgdesc="aardio"
 arch=('any')
 url="https://aardio.com"
 license=('custom')
-groups=('lat')
-depends=('wine')
+groups=('wine-apps')
+depends=('wine-app-helper')
 OPTIONS=(!strip)
 noextract=("$pkgname.tar.xz")
 source=("http://loongarch.zhcn.cc/sources/wine-apps/$pkgname.tar.xz/17f3d853f614abd9451019d9716fea28/$pkgname.tar.xz"
