--- a/powerword/PKGBUILD
+++ b/powerword/PKGBUILD
@@ -5,8 +5,8 @@ pkgdesc="PowerWord(金山词霸)"
 arch=('any')
 url="http://cp.iciba.com"
 license=('custom')
-groups=('lat')
-depends=('wine')
+groups=('wine-apps')
+depends=('wine-app-helper')
 OPTIONS=(!strip)
 noextract=("$pkgname.tar.xz")
 source=("http://loongarch.zhcn.cc/sources/wine-apps/$pkgname.tar.xz/aefea8c7dfb446701d4f7eb434defe1c/$pkgname.tar.xz"
