--- a/typeeasy/PKGBUILD
+++ b/typeeasy/PKGBUILD
@@ -1,15 +1,15 @@
 pkgname=typeeasy
-pkgver=11.6
+pkgver=2.2.0.59
 pkgrel=1
-pkgdesc="Kingsoft TypeEasy(金山打字通)"
+pkgdesc="Kingsoft TypeEasy(金山打字通) 2016"
 arch=('any')
 url="https://www.51dzt.com"
 license=('custom')
 groups=('wine-apps')
 depends=('wine-app-helper')
 OPTIONS=(!strip)
-noextract=("$pkgname.tar.xz")
-source=("http://loongarch.zhcn.cc/sources/wine-apps/$pkgname.tar.xz/3740ea11a4e0e5ab07499d0bc2a41205/$pkgname.tar.xz"
+noextract=("$pkgname.tar.zst")
+source=("http://public.loongarch.dev/sources/wine-apps/$pkgname.tar.zst/7be851722fd9c443d1ee851dfef895cc/$pkgname.tar.zst"
     16.png
     256.png
     32.png
@@ -33,14 +33,21 @@ userdef.reg
 system.reg
 EOF
   install -Dm644 app_ignore                ${pkgdir}/opt/wine-apps/$pkgname/.appignore
-  install -Dm644 $srcdir/$pkgname.tar.xz   ${pkgdir}/opt/wine-apps/$pkgname/$pkgname.tar.xz
+  install -Dm644 $srcdir/$pkgname.tar.zst  ${pkgdir}/opt/wine-apps/$pkgname/$pkgname.tar.zst
   install -Dm644 $srcdir/$pkgname.metainfo ${pkgdir}/opt/wine-apps/$pkgname/$pkgname.metainfo
   install -Dm644 $srcdir/$pkgname.desktop  ${pkgdir}/usr/share/applications/$pkgname.desktop
   ln -sf wine-run                          ${pkgdir}/usr/bin/$pkgname
 
-  for i in 16 24 32 48 256; do
+  for i in 16 24 32 48 64 96 128 256; do
     if [ -f $srcdir/$i.png ]; then
       install -Dm644 $srcdir/$i.png        ${pkgdir}/usr/share/icons/hicolor/${i}x${i}/apps/$pkgname.png
     fi
   done
 }
+sha256sums=('b15e3a53bf7a0a95685632433f482545df7405e639b0b6bb6d3fb47022376638'
+            'ab3f9192d9a3469f949b235a4012e43fabb9c0ec1378b162ed3d50359a45c94b'
+            '7f93582b17651e4d83c16d1e63d8464b65f333e8e09e584b056b90db58830f97'
+            'eec64b8790a8eb7b1a94fd2ff2009889689fb0380f1224ac51aeea989ebabc2e'
+            '5ec8579cadfeaac927fa42b7f753a1641f70f64e0375f8923260ba302bebdbc3'
+            '98b851bb1268f22498ba84092230d8659a169b447dcc8f02fee89cf9fbcaa665'
+            '5322b3d212f7e6784d413716658b6467ad2fee48d291fa988b505096f264944c')
