--- a/yuanshen/PKGBUILD
+++ b/yuanshen/PKGBUILD
@@ -3,8 +3,9 @@ pkgver=4.1.0
 pkgrel=1
 pkgdesc='Yuanshen(原神)'
 license=('AGPL3')
+groups=('apps')
 depends=('ffmpeg' 'electron' 'libappindicator-gtk3')
-arch=('aarch64' 'x86_64' 'loong64')
+arch=('any')
 url="https://ys.mihoyo.com/main/"
 source=(
     http://public.loongarch.dev/sources/yuanshen/yuanshen.asar/34dc7ccc830621a83cac6e5c2587d50a/yuanshen.asar
