--- a/aardio/PKGBUILD
+++ b/aardio/PKGBUILD
@@ -1,27 +1,28 @@
 pkgname=aardio
-pkgver=35.28.2
-pkgrel=2
+pkgver=35.70.1
+pkgrel=1
+pkgdate=20231031
 pkgdesc="aardio"
 arch=('any')
 url="https://aardio.com"
 license=('custom')
 groups=('wine-apps')
 depends=('wine-app-helper')
-OPTIONS=(!strip)
+options=(!strip)
 noextract=("$pkgname.tar.zst")
-source=("http://public.loongarch.dev/sources/wine-apps/$pkgname.tar.zst/328474d1e07da0c66a7098032ea8f40f/$pkgname.tar.zst"
+source=("http://public.loongarch.dev/sources/wine-apps/$pkgname-$pkgdate.tar.zst/7830729f99d4a32ecd57c304e01893a4/$pkgname-$pkgdate.tar.zst"
     16.png
     32.png
     48.png
     64.png
     $pkgname.metainfo
     $pkgname.desktop)
-sha256sums=('f41d66e59b94f4c6a3963ed6b16f3d272cc8c25d1ff5d1b6684080b0aa33b8bc'
+sha256sums=('fff73a2aee1b1872f38a375ee9326a3e315082111b10224b3c9d965b4e613bf0'
             '8450aef2dc1eee1ea9053e8a7af2179d8063e0f463ffbbc395b4242604b3676a'
             '8acd017e2836249052cdbfcf0702a20404ec0e9d9b5fcb91bdf24b5a4da427c6'
             '34a424b0e521aeb034dc5551de0a2d0ce2f6b9996511bd3aff11711b137cfc55'
             '2073247e93c4d14868b17f21dcda81223fa613b4d363c77b9277cc4c3a58e2b5'
-            '6368823e9fdd024f7b0983bdf87a07a1fa93e4f216f90c731871efbcd7779bff'
+            '6a5211aa9510f41d279cab83c20b82685f3c2505544609acfd34f8c7e93ee2fa'
             'd41734f82cd483c6a022d4b4a0c8b0255b4781cf622e09dcf216eb45d232261e')
 
 package() {
@@ -33,7 +34,7 @@ userdef.reg
 system.reg
 EOF
   install -Dm644 app_ignore                ${pkgdir}/opt/wine-apps/$pkgname/.appignore
-  install -Dm644 $srcdir/$pkgname.tar.zst  ${pkgdir}/opt/wine-apps/$pkgname/$pkgname.tar.zst
+  install -Dm644 $srcdir/$pkgname-$pkgdate.tar.zst  ${pkgdir}/opt/wine-apps/$pkgname/$pkgname-$pkgdate.tar.zst
   install -Dm644 $srcdir/$pkgname.metainfo ${pkgdir}/opt/wine-apps/$pkgname/$pkgname.metainfo
   install -Dm644 $srcdir/$pkgname.desktop  ${pkgdir}/usr/share/applications/$pkgname.desktop
   ln -sf wine-run                          ${pkgdir}/usr/bin/$pkgname
