--- a/linuxqq/PKGBUILD
+++ b/linuxqq/PKGBUILD
@@ -1,16 +1,16 @@
 pkgname=linuxqq
 pkgver=3.2.5
-pkgbld=20670
-pkgrel=1
+pkgbld=20811
+pkgrel=2
 pkgdesc="New Linux QQ based on Electron"
 arch=(loong64)
 url="https://im.qq.com/linuxqq/index.shtml"
 license=(custom)
 depends=(liblol)
 OPTIONS=(strip !debug)
-source=("https://dldir1.qq.com/qqfile/qq/QQNT/172de072/${pkgname}_${pkgver}-${pkgbld}_loong64.deb"
+source=("https://dldir1.qq.com/qqfile/qq/QQNT/d0154345/${pkgname}_${pkgver}-${pkgbld}_loongarch64.deb"
     linuxqq.sh)
-sha256sums=('5b097fd426cb350eaaaa52f58a31aa43cbf22c431e3466846d6a7484a85855f7'
+sha256sums=('ec7a47e96edd67e9fa898e85896107a93b6d543aafffa07c162681100aaaaf96'
             'fcc8ab360be9fde853b9a4279251072df6807a3bd697677cd8175fb0b89d9be7')
 
 package() {
