--- a/wps-office/PKGBUILD
+++ b/wps-office/PKGBUILD
@@ -1,17 +1,47 @@
 pkgname=wps-office
 pkgver=11.1.0
 pkgbld=11719
-pkgrel=3
+pkgrel=4
 pkgdesc="Kingsoft Office (WPS Office) - an office productivity suite"
 arch=(loong64)
 url="https://linux.wps.cn"
 license=(custom)
 depends=(liblol)
+makedepends=(dpkg)
 options=(strip !debug)
-source=("https://wps-linux-personal.wpscdn.cn/wps/download/ep/Linux2019/${pkgbld}/${pkgname}_${pkgver}.${pkgbld}_loongarch64.deb")
-sha256sums=('eb6c7510970ba16fc595dbe92c22aae21df29b259c4b34cd5ab6c2e751dd4c87')
+source=("https://wps-linux-personal.wpscdn.cn/wps/download/ep/Linux2019/${pkgbld}/${pkgname}_${pkgver}.${pkgbld}_loongarch64.deb"
+    "libtiff5.deb::https://pkg.loongnix.cn/loongnix/pool/main/t/tiff/libtiff5_4.1.0+git191117-2~deb10u1.lnd.4_loongarch64.deb"
+    "libwebp6.deb::https://pkg.loongnix.cn/loongnix/pool/main/libw/libwebp/libwebp6_0.6.1-2.lnd.2_loongarch64.deb"
+    "libjbig.deb::https://pkg.loongnix.cn/loongnix/pool/main/j/jbigkit/libjbig0_2.1-3.2_loongarch64.deb"
+    "libjpeg.deb::https://pkg.loongnix.cn/loongnix/pool/main/libj/libjpeg-turbo/libjpeg62-turbo_1.5.2-2.lnd.4_loongarch64.deb")
+noextract=('libtiff5.deb'
+    'libwebp6.deb'
+    'libjbig.deb'
+    'libjpeg.deb'
+    )
+sha256sums=('eb6c7510970ba16fc595dbe92c22aae21df29b259c4b34cd5ab6c2e751dd4c87'
+            '674d2fa5546480b32d72386b52fbd7b8fbda6c7a4162bd930527134da3eb74cf'
+            'ca90e844566f0b86165164fc92d863155e99a7dedaf2c09d2cc1b129fcecb7b6'
+            '5ca4f04ee553fd9bdf1090b766a0fd7b2474c1f72eb2d76dbc3f2183d243b0dc'
+            'eb386d5b9dac62bebaf4d8ff6db7c269a2244f6a1c0c8224a3da7007c33f5e24')
 
+set -x
+
+_pick() {
+  local p="$1" f="$2" d="$3" t
+  t="$(echo "$p"|tr . _)"
+  dpkg-deb -x ${srcdir}/${p} $t
+  cp -L "$t/usr/lib/loongarch64-linux-gnu/$f" "${pkgdir}/$d"
+  rm -r $t
+}
 package() {
   tar -C ${pkgdir} -xf data.tar.xz
   rm -f ${pkgdir}/opt/kingsoft/wps-office/office6/libstdc++.so.6
+
+# add the lost so for wpspdf
+#  mkdir -p ${pkgdir}/opt/kingsoft/wps-office/office6/
+  _pick libtiff5.deb libtiff.so.5 /opt/kingsoft/wps-office/office6/
+  _pick libwebp6.deb libwebp.so.6 /opt/kingsoft/wps-office/office6/
+  _pick libjbig.deb libjbig.so.0 /opt/kingsoft/wps-office/office6/
+  _pick libjpeg.deb libjpeg.so.62 /opt/kingsoft/wps-office/office6/
 }
